[package]
name = "archery-tools-lambdas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scoresheet"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.31.1"
lambda_http = "0.11.1"
tokio = { version = "1.38.0", features = ["full"] }
