[package]
name = "archery-tools-lambdas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scoresheet"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.31.1"
aws_lambda_events = { version = "0.15.1", features = ["apigw"] }
chrono = "0.4.38"
lambda_runtime = "0.11.3"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "fast-rng"] }
